<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityRanking"
    android:background="@drawable/pepe"
    >


    <LinearLayout
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/botonVolverEnRanking"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:onClick="volverAtras"
            android:src="@drawable/menu"
            android:text="@string/volverAtras" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="219dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="20dp"
            android:background="#00FFFFFF"
            android:gravity="center"
            android:src="@drawable/ranking"
            android:text="@string/Ranking"
            android:textSize="30sp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:id="@+id/botonSubir"
            android:background="#00FFFFFF"
            android:src="@drawable/flechasub"
            android:onClick="subirRanking"/>

        <ImageView
            android:id="@+id/imagenRanking"
            android:layout_width="188dp"
            android:layout_marginTop="20dp"
            android:layout_height="141dp"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="383dp"
            android:layout_height="72dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewRanking1"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ems="10"
                android:fontFamily="@font/titan_one"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewRanking2"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ems="10"

                android:fontFamily="@font/titan_one"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewRanking3"
                android:layout_width="137dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ems="10"
                android:fontFamily="@font/titan_one"
                android:textSize="15sp" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/botonBajar"
            android:layout_width="50dp"
            android:layout_marginTop="0dp"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:src="@drawable/flechabaj"
            android:layout_gravity="center"
            android:onClick="bajarRanking"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>